# 41-pantograph-arc-vision

./: CMakeLists.txt  Makefile  README.md  go.mod
cmd/arcvision/: main.go
configs/: config.yaml
cpp/: CMakeLists.txt
cpp/include/: arc_detector.h  arc_severity.h  cuda_preprocess.h  shm_frame_queue.h  trt_engine.h  zmq_publisher.h
cpp/src/: arc_detector.cpp  arc_severity.cpp  cuda_preprocess.cu  engine_main.cpp  shm_frame_queue.cpp  trt_engine.cpp  zmq_publisher.cpp
pkg/decoder/: decoder.go
pkg/result/: receiver.go
pkg/shm/: queue.go
pkg/sync/: framesync.go
